# terminal-rain-lightning

./: .gitignore  README.md  derivation.nix  pyproject.toml  terminal_rain_lightning.py
.plans/: buzzing-inventing-twilight.md
.succession/: config.edn
.succession/contradictions/: c-tier-data-first-design.edn  c-tier-infinite-context.edn  c-tier-verify-via-repl.edn
.succession/identity/promoted/ethic/: judge-conscience-framing.md
.succession/identity/promoted/rule/: data-first-design.md  infinite-context.md  verify-via-repl.md
.succession/staging/238b07ab-f6ed-4f85-9455-071e650f499b/: snapshot.edn
.succession/staging/35408d15-8a63-4caf-af3e-88abd892739f/: contradictions.jsonl  deltas.jsonl  snapshot.edn
.succession/staging/63cf3b7a-f28b-4d2c-bdac-a706ca6b5e42/: contradictions.jsonl  deltas.jsonl  snapshot.edn
.succession/staging/jobs/: 20260415T141314942Z-32747c79-a1c6-4ac4-93f3-253635ec3a6f.json  20260415T141317009Z-517b0183-5a24-40fd-9866-83ee2da1e936.json  20260415T141317396Z-1cab2733-1ab5-463c-9783-f2ccb96ed3f2.json  20260415T141318453Z-a7563762-4408-4637-bceb-6ea3d0ee51c9.json  20260415T141321291Z-04882096-3e8b-4bff-a95b-f2c9c74d038e.json  20260415T141321291Z-2c173cca-04c1-44b4-bf74-7ddb3c4057fc.json  20260415T141321330Z-919e0901-fba1-491b-84f8-9bae15116c05.json  20260415T141321502Z-5dd2fac7-f99e-4647-a027-e303224dec95.json  20260415T141321773Z-ee1ccb8a-c076-491d-ad97-cd9df7246baf.json  20260415T141321872Z-5ef6e3e0-07bc-4a0b-b68c-e204cb36a925.json  20260415T141325345Z-a376cd01-c0ff-4ab0-a33f-bfdfca077a16.json  20260415T141325360Z-6911ec91-427f-4d6d-9b06-bd766c587bf8.json  20260415T141325361Z-53e0e3d0-2ef4-4925-b87c-a7a8da38a555.json  20260415T141325366Z-3c0f5876-a9e4-4218-b4cc-12d53c809556.json  20260415T141325701Z-6bdb3f50-5ad5-4742-b05f-4138ddd6657d.json  20260415T141325930Z-d1741f65-45f1-41dd-a847-4b7916948b64.json  20260415T141327051Z-48500e3f-2300-4a2b-b1e7-0bc2716ab58e.json  20260415T141327051Z-8c9d7b4b-05e6-4583-bd99-78c4296baa7f.json  20260415T141327052Z-07663580-454b-49f3-83d1-d4c2235fed82.json  20260415T141331481Z-b22e45c8-137d-4b49-b9e6-21dc87f2c6df.json  20260415T141334008Z-47c5c170-52fd-481a-8a49-f675fc203f34.json  20260415T141337041Z-815a4bb6-c5bc-4428-a4e3-eceba447a051.json  20260415T141339548Z-d7d3304e-4cca-45cb-a263-89841ee4f45e.json
.succession/staging/jobs/.inflight/: 20260415T141249443Z-10fb2b5e-66d9-4ac8-891c-f9386606d8a2.json  20260415T141254329Z-c6185c33-60fb-407d-a45c-8cab0ab984b4.json  20260415T141301176Z-dab0f2a0-ee7e-4ab7-a065-4eb6f123659d.json  20260415T141302563Z-ae58ba45-609b-4935-b998-4f9020f38291.json  20260415T141304318Z-910d2390-de66-4f84-8f3a-e96e2c0ef65c.json  20260415T141307776Z-e498e3c8-5c4b-4b99-baad-3f8205ff7d9a.json  20260415T141310640Z-d81bfd6d-7292-4feb-904b-6de0e28249ca.json
stormtty/: __init__.py
terminal_rain_lightning/: __init__.py
terminal_rain_lightning_assets/: __init__.py
terminal_rain_lightning_assets/sounds/: ASSETS.md
