[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
# backend-path = "." # Optional, default is "." - indicates setup.cfg/setup.py is in the same dir if needed

[project]
name = "stormtty"
version = "0.1.0" # Start with an initial version
authors = [
    { name = "danieltanfh95", email = "danieltanfh95@gmail.com" },
]
description = "A terminal rain and lightning animation using Python and curses."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Artistic Software",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Terminals",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]

[project.urls]
"Homepage" = "https://github.com/danieltanfh95/stormtty"
"Bug Tracker" = "https://github.com/danieltanfh95/stormtty/issues"

# This section makes your script runnable from the command line after installation
[project.scripts]
stormtty = "stormtty:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
stormtty = ["sounds/*.mp3"]
